<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_live_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/live_tv" />

    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies" />

    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/ic_series"
        android:title="@string/series" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>
